# IDJ-2025.2

./: .gitignore  Makefile.in  README.MD  bytes  configure  configure.ac
assets/: placeholder.sbmp  zann.sbmp
assets/musica/mightytree/: fugue1.smid  fugue2.smid  fugue3.smid  fugue4.smid  hihat.smid
assets/musica/takefive/: baixo.smid  hihat.smid  piano.smid  ritmo.smid  sax.smid
docs/: Arquitetura.dot  DetalhesTecnicos.md  Planejamento.md  RedePetri.dot  Synth.md
scripts/: aprox_sen.py  checa_distorcao.py  gerar_freqs.py  imgseq_to_sbmp.py  midi_to_smidi.py
src/: assets.hpp  autoconf.h
src/base/: SDL.cpp  SDL.hpp
src/base/interface/: Janela.cpp  Janela.hpp
src/base/jogo/: Jogo.cpp  Jogo.hpp
src/base/loaders/: Descomprimido.cpp  Descomprimido.hpp  LoaderSBMP.cpp  LoaderSBMP.hpp
src/base/mensagens/: Canal.hpp  ComandoGrafico.hpp
src/base/mundo/: Desenhavel.cpp  Desenhavel.hpp  ImagemDesenhavel.cpp  ImagemDesenhavel.hpp  Mundo.cpp  Mundo.hpp  Objeto.hpp  ObjetoDesenhavel.cpp  ObjetoDesenhavel.hpp  SBMPDesenhavel.cpp  SBMPDesenhavel.hpp
src/base/musica/: LinhaMelodica.cpp  LinhaMelodica.hpp  Musica.cpp  Musica.hpp  OndaQuadrada.cpp  OndaQuadrada.hpp  Ruido.cpp  Ruido.hpp  Samplerate.h  Seno.cpp  Seno.hpp  Silencio.cpp  Silencio.hpp  Synth.cpp  Synth.hpp
src/concreto/musicas/: MightyTree.hpp  TakeFive.hpp
src/entrypoints/: jogo.cpp  main.cpp
